:recycle: Simplified responses
Answers are made as simple as possible in order to implement a normal error handling system later
