# internal/ports/http/server/methods.go
@@ -1,4 +1,4 @@
-package http
+package server
 
 import (
 	"fmt"
@@ -14,26 +14,22 @@ import (
 	"github.com/F0rzend/SimpleGoWebserver/internal/ports/http/types"
 )
 
+func getUserIDFromURL(r *http.Request) (uint64, error) {
+	return strconv.ParseUint(chi.URLParam(r, "id"), 10, 64) // nolint: gomnd
+}
+
 func (s *Server) CreateUser(w http.ResponseWriter, r *http.Request) {
 	rspd := MustNewResponder(w, r)
 
 	request := new(types.CreateUserRequest)
 
 	if err := render.Bind(r, request); err != nil {
-		var status int
-		var response render.Renderer
-
-		switch err.(type) {
-		case types.ErrInvalidEmail:
-			status = http.StatusBadRequest
-			errMsg := fmt.Sprintf("invalid email: %s", err.Error())
-			response = Error(http.StatusBadRequest, errMsg)
+		switch err {
+		case types.ErrBadRequest:
+			rspd.StatusOnly(http.StatusBadRequest)
 		default:
-			status = http.StatusInternalServerError
-			response = types.InternalError
+			rspd.InternalError(err)
 		}
-		rspd.Status(status)
-		rspd.Response(response)
 		return
 	}
 
@@ -49,13 +45,13 @@ func (s *Server) CreateUser(w http.ResponseWriter, r *http.Request) {
 
 	rspd.Status(http.StatusCreated)
 	rspd.LocationHeader(fmt.Sprintf("/users/%d", id))
-	rspd.Response(SuccessResponse(fmt.Sprintf("/users/%d", id)))
+	rspd.Response(fmt.Sprintf("/users/%d", id))
 }
 
 func (s *Server) GetUser(w http.ResponseWriter, r *http.Request) {
 	rspd := MustNewResponder(w, r)
 
-	id, err := strconv.ParseUint(chi.URLParam(r, "id"), 10, 64)
+	id, err := getUserIDFromURL(r)
 	if err != nil {
 		rspd.InternalError(err)
 		return
@@ -65,8 +61,7 @@ func (s *Server) GetUser(w http.ResponseWriter, r *http.Request) {
 	switch err.(type) {
 	case nil:
 	case domain.ErrUserNotFound:
-		rspd.Status(http.StatusNotFound)
-		rspd.Response(Error(http.StatusNotFound, fmt.Sprintf("user with id %d not found", id)))
+		rspd.StatusOnly(http.StatusNotFound)
 		return
 	default:
 		rspd.InternalError(err)
@@ -74,60 +69,52 @@ func (s *Server) GetUser(w http.ResponseWriter, r *http.Request) {
 	}
 
 	rspd.Status(http.StatusOK)
-	rspd.Response(SuccessResponse(s.assembler.UserToResponse(*user)))
+	rspd.Response(s.assembler.UserToResponse(user))
 }
 
 func (s *Server) UpdateUser(w http.ResponseWriter, r *http.Request) {
 	rspd := MustNewResponder(w, r)
 
 	request := new(types.UpdateUserRequest)
-	id, err := strconv.ParseUint(chi.URLParam(r, "id"), 10, 64)
+	id, err := getUserIDFromURL(r)
 	if err != nil {
 		rspd.InternalError(err)
 		return
 	}
 
 	if err := render.Bind(r, request); err != nil {
-		var status int
-		var response render.Renderer
-
-		switch err.(type) {
-		case types.ErrInvalidEmail:
-			status = http.StatusBadRequest
-			errMsg := err.Error()
-			response = Error(http.StatusBadRequest, errMsg)
+		switch err {
+		case types.ErrBadRequest:
+			rspd.StatusOnly(http.StatusBadRequest)
 		default:
-			status = http.StatusInternalServerError
-			response = types.InternalError
+			rspd.InternalError(err)
 		}
-		rspd.Status(status)
-		rspd.Response(response)
 		return
 	}
 
-	if err := s.app.Commands.UpdateUser.Handle(commands.UpdateUserCommand{
+	err = s.app.Commands.UpdateUser.Handle(commands.UpdateUserCommand{
 		ID:    id,
 		Name:  request.Name,
 		Email: request.Email,
-	}); err != nil {
+	})
+	switch err.(type) {
+	case nil:
+	case domain.ErrUserNotFound:
+		rspd.StatusOnly(http.StatusNotFound)
+		return
+	default:
 		rspd.InternalError(err)
 		return
 	}
 
-	user, err := s.app.Queries.GetUser.Handle(id)
-	if err != nil {
-		rspd.InternalError(err)
-		return
-	}
-
-	rspd.Status(http.StatusOK)
-	rspd.Response(SuccessResponse(s.assembler.UserToResponse(*user)))
+	rspd.Status(http.StatusNoContent)
+	rspd.LocationHeader(fmt.Sprintf("/users/%d", id))
 }
 
 func (s *Server) GetUserBalance(w http.ResponseWriter, r *http.Request) {
 	rspd := MustNewResponder(w, r)
 
-	id, err := strconv.ParseUint(chi.URLParam(r, "id"), 10, 64)
+	id, err := getUserIDFromURL(r)
 	if err != nil {
 		rspd.InternalError(err)
 		return
@@ -137,8 +124,7 @@ func (s *Server) GetUserBalance(w http.ResponseWriter, r *http.Request) {
 	switch err.(type) {
 	case nil:
 	case domain.ErrUserNotFound:
-		rspd.Status(http.StatusNotFound)
-		rspd.Response(Error(http.StatusNotFound, fmt.Sprintf("user with id %d not found", id)))
+		rspd.StatusOnly(http.StatusNotFound)
 		return
 	default:
 		rspd.InternalError(err)
@@ -146,7 +132,7 @@ func (s *Server) GetUserBalance(w http.ResponseWriter, r *http.Request) {
 	}
 
 	rspd.Status(http.StatusOK)
-	rspd.Response(SuccessResponse(balance.ToFloat()))
+	rspd.Response(balance.ToFloat())
 }
 
 func (s *Server) GetBTC(w http.ResponseWriter, r *http.Request) {
@@ -159,7 +145,7 @@ func (s *Server) GetBTC(w http.ResponseWriter, r *http.Request) {
 	}
 
 	rspd.Status(http.StatusOK)
-	rspd.Response(SuccessResponse(s.assembler.BTCToResponse(btc)))
+	rspd.Response(s.assembler.BTCToResponse(btc))
 }
 
 func (s *Server) SetBTCPrice(w http.ResponseWriter, r *http.Request) {
@@ -167,20 +153,12 @@ func (s *Server) SetBTCPrice(w http.ResponseWriter, r *http.Request) {
 
 	request := new(types.SetBTCPriceRequest)
 	if err := render.Bind(r, request); err != nil {
-		var status int
-		var response render.Renderer
-
-		switch err.(type) {
-		case types.ErrInvalidPrice:
-			status = http.StatusBadRequest
-			errMsg := fmt.Sprintf("invalid btc price: %s", err.Error())
-			response = Error(http.StatusBadRequest, errMsg)
+		switch err {
+		case types.ErrBadRequest:
+			rspd.StatusOnly(http.StatusBadRequest)
 		default:
-			status = http.StatusInternalServerError
-			response = types.InternalError
+			rspd.InternalError(err)
 		}
-		rspd.Status(status)
-		rspd.Response(response)
 		return
 	}
 
@@ -193,13 +171,13 @@ func (s *Server) SetBTCPrice(w http.ResponseWriter, r *http.Request) {
 
 	rspd.Status(http.StatusCreated)
 	rspd.LocationHeader("/bitcoin")
-	rspd.Response(SuccessResponse("/bitcoin"))
+	rspd.Response("/bitcoin")
 }
 
 func (s *Server) ChangeUSDBalance(w http.ResponseWriter, r *http.Request) {
 	rspd := MustNewResponder(w, r)
 
-	id, err := strconv.ParseUint(chi.URLParam(r, "id"), 10, 64)
+	id, err := getUserIDFromURL(r)
 	if err != nil {
 		rspd.InternalError(err)
 		return
@@ -207,24 +185,12 @@ func (s *Server) ChangeUSDBalance(w http.ResponseWriter, r *http.Request) {
 
 	request := new(types.ChangeUSDBalanceRequest)
 	if err := render.Bind(r, request); err != nil {
-		var status int
-		var response render.Renderer
-
 		switch err {
-		case types.ErrInvalidAction:
-			status = http.StatusBadRequest
-			errMsg := "Invalid action. Action should be 'withdraw' or 'deposit'"
-			response = Error(http.StatusBadRequest, errMsg)
-		case types.ErrInvalidAmount:
-			status = http.StatusBadRequest
-			errMsg := "Invalid amount. Amount should be positive number"
-			response = Error(http.StatusBadRequest, errMsg)
+		case types.ErrBadRequest:
+			rspd.StatusOnly(http.StatusBadRequest)
 		default:
-			status = http.StatusInternalServerError
-			response = types.InternalError
+			rspd.InternalError(err)
 		}
-		rspd.Status(status)
-		rspd.Response(response)
 		return
 	}
 
@@ -236,8 +202,7 @@ func (s *Server) ChangeUSDBalance(w http.ResponseWriter, r *http.Request) {
 	switch err.(type) {
 	case nil:
 	case domain.ErrUserNotFound:
-		rspd.Status(http.StatusNotFound)
-		rspd.Response(Error(http.StatusNotFound, fmt.Sprintf("user with id %d not found", id)))
+		rspd.StatusOnly(http.StatusNotFound)
 		return
 	default:
 		rspd.InternalError(err)
@@ -246,13 +211,13 @@ func (s *Server) ChangeUSDBalance(w http.ResponseWriter, r *http.Request) {
 
 	rspd.Status(http.StatusOK)
 	rspd.LocationHeader(fmt.Sprintf("/users/%d", id))
-	rspd.Response(SuccessResponse(fmt.Sprintf("/users/%d", id)))
+	rspd.Response(fmt.Sprintf("/users/%d", id))
 }
 
 func (s *Server) ChangeBTCBalance(w http.ResponseWriter, r *http.Request) {
 	rspd := MustNewResponder(w, r)
 
-	id, err := strconv.ParseUint(chi.URLParam(r, "id"), 10, 64)
+	id, err := getUserIDFromURL(r)
 	if err != nil {
 		rspd.InternalError(err)
 		return
@@ -260,24 +225,12 @@ func (s *Server) ChangeBTCBalance(w http.ResponseWriter, r *http.Request) {
 
 	request := new(types.ChangeBTCBalanceRequest)
 	if err := render.Bind(r, request); err != nil {
-		var status int
-		var response render.Renderer
-
 		switch err {
-		case types.ErrInvalidAction:
-			status = http.StatusBadRequest
-			errMsg := "Invalid action. Action should be 'buy' or 'sell'"
-			response = Error(http.StatusBadRequest, errMsg)
-		case types.ErrInvalidAmount:
-			status = http.StatusBadRequest
-			errMsg := "Invalid amount. Amount should be positive number"
-			response = Error(http.StatusBadRequest, errMsg)
+		case types.ErrBadRequest:
+			rspd.StatusOnly(http.StatusBadRequest)
 		default:
-			status = http.StatusInternalServerError
-			response = types.InternalError
+			rspd.InternalError(err)
 		}
-		rspd.Status(status)
-		rspd.Response(response)
 		return
 	}
 
@@ -289,15 +242,13 @@ func (s *Server) ChangeBTCBalance(w http.ResponseWriter, r *http.Request) {
 	switch err.(type) {
 	case nil:
 	case domain.ErrUserNotFound:
-		rspd.Status(http.StatusNotFound)
-		rspd.Response(Error(http.StatusNotFound, fmt.Sprintf("user with id %d not found", id)))
+		rspd.StatusOnly(http.StatusNotFound)
 		return
 	default:
 		rspd.InternalError(err)
 		return
 	}
 
-	rspd.Status(http.StatusOK)
+	rspd.Status(http.StatusNoContent)
 	rspd.LocationHeader(fmt.Sprintf("/users/%d", id))
-	rspd.Response(SuccessResponse(fmt.Sprintf("/users/%d", id)))
 }
